@@ -2,8 +2,8 @@ RM=rm -f
 TARGET=unit
 all:
 	clear
-	clang++ -std=c++20 -static -m32 -g -I ../.. main.cpp -o $(TARGET).32
-	clang++ -std=c++20 -static -m64 -g -I ../.. main.cpp -o $(TARGET).64
+	clang++ -std=c++20 -static -m32 -g -I .. -I ../.. main.cpp -o $(TARGET).32
+	clang++ -std=c++20 -static -m64 -g -I .. -I ../.. main.cpp -o $(TARGET).64
 run:
 	make run32
 	make run64
