@@ -47,3 +47,7 @@
 * метод Model::addLayer() теперь реализован через вариативный шаблон и может принимать дополнительные аргументы;
 * SELU и тест;
 * инициализация Layer;
+
+* добавлен отладочный слой Assertion для отслеживания ошибок при передаче данных между слоями;
+* добавлена библиотека для тестирования нейросетевых моделей;
+* класс Arctan переведен на библиотеку юнит-тестирования моделей;
